--- a/src/lightStyle.css
+++ b/src/lightStyle.css
@@ -49,7 +49,9 @@ html {
     font-family: 'Muli', sans-serif;
     font-size: 6rem;
     color: #2b6fad;
-    text-shadow: 1px 0 0 rgb(0, 0, 0), -1px 0 0 rgb(0, 0, 0), 0 1px 0 rgb(0, 0, 0), 0 -1px 0 rgb(0, 0, 0), 1px 1px rgb(0, 0, 0), -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0);
+    text-shadow: 1px 0 0 rgb(0, 0, 0), -1px 0 0 rgb(0, 0, 0), 0 1px 0 rgb(0, 0, 0),
+     0 -1px 0 rgb(0, 0, 0), 1px 1px rgb(0, 0, 0), -1px -1px 0 rgb(0, 0, 0),
+     1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0);
 }
 
 .top img {
@@ -77,7 +79,8 @@ html {
 .main {
     display: flex;
     flex-direction: column;
-    height: 75vh;
+    min-height: 75vh;
+    height: auto;
     border: 1px solid var(--my-blue);
 }
 
@@ -100,7 +103,6 @@ html {
     flex: 1 1 content;
     padding-left: 10px;
 }
-
 
 .newPriority {
     flex: 1 1 auto;
@@ -141,7 +143,6 @@ html {
     width: 300px;
     height: 25px;
 }
-
 
 #counter {
     flex: 1 2 auto;
@@ -187,10 +188,10 @@ html {
     border-bottom: 1px solid rgba(0, 0, 0, 0.089);
     text-align: center;
 }
+
 .todo-container {
     display: flex;
     text-align: left;
-    padding-left: 5px;
 }
 
 .todo-time-left {
@@ -204,7 +205,9 @@ html {
 }
 
 .todo-text {
-    min-width: 620px;
+    width: 620px;
+    overflow-wrap: break-word;
+    height: auto;
     text-align: left;
 }
 
@@ -240,18 +243,15 @@ html {
     visibility: hidden;
     width: 80px;
     height: 80px;
-  
     border: 2px solid #f3f3f3;
     border-top:3px solid var(--my-blue);
     border-radius: 100%;
-  
     position: absolute;
     top:0;
     bottom:0;
     left:0;
     right: 0;
     margin: auto;
-  
     animation: spin 1s infinite linear;
   }
   
